Mode select styling

--- a/src/scss/variables/_all.scss
+++ b/src/scss/variables/_all.scss
@@ -1,12 +1,1 @@
-:root {
-  --color-background: #fff;
-  --color-text: #111;
-  --color-primary: #8341FF;
-  --color-success: #00E676; 
-  --color-error: #FF3D00; 
-}
-
-[data-theme='dark'] {
-  --color-backrgound: #2C2C2C;
-  --color-text: #eee;
-}
+@import 'colors'
