--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,5 +1,6 @@
 :root {
   --color-background: #2C2C2C;
+  --color-header-background: #1C1C1C;
   --color-text: #eee;
   --color-primary: #8341FF;
   --color-success: #00E676; 
