--- a/src/scss/partials/_typography.scss
+++ b/src/scss/partials/_typography.scss
@@ -1,5 +1,11 @@
+@font-face {
+  font-family: 'League';
+  src: url('../public/fonts/Beaufort-Regular.woff2')
+}
+
 body {
   line-height: 1.6;
   font-size: 20px;
   color: var(--color-text);
+  font-family: 'League';
 }
