--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,8 +1,13 @@
 :root {
-  --color-background: #2C2C2C;
-  --color-header-background: #1C1C1C;
-  --color-text: #eee;
+  --color-background: #b2b2b2;
+  --color-background: #c2c2c2;
   --color-primary: #8341FF;
   --color-success: #00E676; 
   --color-error: #FF3D00; 
+}
+
+[data-theme='dark'] {
+  --color-header-background: #1C1C1C;
+  --color-background: #2C2C2C;
+  --color-text: #eee;
 }
