--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -4,6 +4,8 @@
   --color-header-background: #f1f1f1;
   --color-shadow: #bbb;
   --color-text: #333;
+  --color-button-background: #8341FF;
+  --color-button-text: #f1f1f1;
   --color-primary: #8341FF;
   --color-success: #00E676; 
   --color-error: #FF3D00; 
