--- a/src/scss/partials/_guess-select.scss
+++ b/src/scss/partials/_guess-select.scss
@@ -1,4 +1,5 @@
 select.guess-select {
+  width: 100%;
   font-size: 24px;
   padding: 8px;
   margin: 8px;
@@ -7,4 +8,8 @@ select.guess-select {
   border-color: var(--color-primary);
   border-width: 4px;
   border-radius: 16px;
+
+  @include min-width (900) {
+    width: auto;
+  }
 }
